Adicionei nova parte do crud

--- a/FRONT/src/app/app.component.html
+++ b/FRONT/src/app/app.component.html
@@ -32,6 +32,30 @@
           <span>Deletar Filmes</span>
         </div>
       </a>
+      <a mat-list-item routerLink="/pages/cliente/cadastrar">
+        <div class="item">
+          <mat-icon class="icon"> add </mat-icon>
+          <span>Cadastrar Clientes</span>
+        </div>
+      </a>
+      <a mat-list-item routerLink="/pages/cliente/listar">
+        <div class="item">
+          <mat-icon class="icon"> list </mat-icon>
+          <span>Listar Clientes</span>
+        </div>
+      </a>
+      <a mat-list-item routerLink="/pages/cliente/alterar">
+        <div class="item">
+          <mat-icon class="icon"> edit </mat-icon>
+          <span>Alterar Clientes</span>
+        </div>
+      </a>
+      <a mat-list-item routerLink="/pages/cliente/deletar">
+        <div class="item">
+          <mat-icon class="icon"> delete </mat-icon>
+          <span>Deletar Clientes</span>
+        </div>
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content class="content">
