--- a/FRONT/src/app/pages-filme/cadastrar-filme/cadastrar-filme.component.css
+++ b/FRONT/src/app/pages-filme/cadastrar-filme/cadastrar-filme.component.css
@@ -1,5 +1,27 @@
+/* Adicione estilos conforme necessário */
+mat-card {
+  width: 400px;
+  margin: 20px auto;
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
 
-.input {
-  width: 50%;
-  display: block;
+mat-card-title {
+  font-size: 1.5em;
+  font-weight: bold;
+  margin-bottom: 20px;
+}
+
+mat-form-field {
+  width: 100%;
+  margin-bottom: 15px;
+}
+
+mat-card-actions {
+  display: flex;
+  justify-content: flex-end;
+}
+
+button {
+  margin-left: 10px;
 }
