Adicionei locacao e mais algumas coisas

--- a/public/FRONT/src/app/app.component.html
+++ b/public/FRONT/src/app/app.component.html
@@ -56,6 +56,24 @@
           <span>Deletar Clientes</span>
         </div>
       </a>
+      <a mat-list-item routerLink="/pages/locacao/cadastrar">
+        <div class="item">
+          <mat-icon class="icon"> add </mat-icon>
+          <span>Cadastrar Locação</span>
+        </div>
+      </a>
+      <a mat-list-item routerLink="/pages/locacao/listar">
+        <div class="item">
+          <mat-icon class="icon"> list </mat-icon>
+          <span>Listar Locações</span>
+        </div>
+      </a>
+      <a mat-list-item routerLink="/pages/locacao/deletar">
+        <div class="item">
+          <mat-icon class="icon"> delete </mat-icon>
+          <span>Deletar Locação</span>
+        </div>
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content class="content">
