--- a/public/FRONT/src/app/pages-cliente/alterar-cliente/alterar-cliente.component.html
+++ b/public/FRONT/src/app/pages-cliente/alterar-cliente/alterar-cliente.component.html
@@ -6,7 +6,7 @@
   <mat-card-content>
     <mat-form-field class="input" id="id">
       <mat-label>Id</mat-label>
-      <input placeholder="Ex. 1" matInput type="text" [(ngModel)]="clienteId" disabled="true" />
+      <input placeholder="Ex. 1" matInput type="text" [(ngModel)]="clienteId" />
     </mat-form-field>
     <mat-form-field class="input" id="nome">
       <mat-label>Nome</mat-label>
